# sdmbackend

./: .env  .gitignore  Cargo.toml  config.json.example
crates/sdm/: Cargo.toml
crates/sdm/src/: lib.rs
migrations/2023-11-01-192947_create_cards/: up.sql
migrations/2023-11-01-201414_create_visits/: up.sql
secret-static/: index.html
src/: authentication.rs  card_verifier.rs  db.rs  handlers.rs  main.rs  models.rs  sdm.rs  server_settings.rs
static/: access-denied.html  index.html
