[package]
name = "sdmbackend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
tokio = { version = "1.32.0", features = ["full"] }
sdm = { path = "crates/sdm" }
serde = "1.0.190"
serde_json = "1.0.107"
ed25519-dalek = "2.0.0"
hex = "0.4.3"
