[package]
name = "sdmbackend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.20", features = ["headers"] }
tokio = { version = "1.32.0", features = ["full"] }
sdm = { path = "crates/sdm" }
serde = "1.0.190"
serde_json = "1.0.107"
ed25519-dalek = "2.0.0"
hex = "0.4.3"
diesel = { version = "2.1.3", features = ["sqlite"] }
dotenvy = "0.15.7"
log = "0.4.20"
simple_logger = "4.2.0"
axum-extra = { version = "0.8.0", features = ["cookie"] }
axum_session = "0.9.0"
